# hexlet-django-blog

./: .gitignore  create_articles.py  db.sqlite3  pyproject.toml
hexlet-django-blog/: manage.py
hexlet-django-blog/hexlet_django_blog/: settings.py  urls.py
hexlet-django-blog/hexlet_django_blog/article/: urls.py  views.py
hexlet-django-blog/hexlet_django_blog/article/templates/: index.html
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: index.html  show.html
hexlet_django_blog/templates/: about.html  base.html  index.html
