[project]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "django>=5.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.dependencies]
python-dotenv = "^1.0.0"
